# openapi-laravel-generator

./: Cargo.toml  justfile
examples/: openapi.yaml
src/: cli.rs  main.rs  templates.rs
src/parser/: mod.rs
templates/: request.template.php
